# roadmap-rentcars-machine-learning

./: README.md  build_apps.sh  cookiecutter.json  sonar-project.properties
{{ cookiecutter.repo_name }}/: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
{{ cookiecutter.repo_name }}/.github/workflows/: mlops-ci-cd.yml
{{ cookiecutter.repo_name }}/airflow/: README.md
{{ cookiecutter.repo_name }}/airflow/dags/: ml_batch_inference_pipeline.py  ml_continuous_training_pipeline.py  ml_training_pipeline.py
{{ cookiecutter.repo_name }}/config/: README.md  aws_config.yaml  prometheus.yml
{{ cookiecutter.repo_name }}/data/01 - bronze/: README.md
{{ cookiecutter.repo_name }}/data/02 - silver/: README.md
{{ cookiecutter.repo_name }}/data/03 - ml/: README.md
{{ cookiecutter.repo_name }}/data/04 - gold/: README.md
{{ cookiecutter.repo_name }}/docker/: Dockerfile.inference  Dockerfile.mlflow  Dockerfile.training
{{ cookiecutter.repo_name }}/docs/: README.md  data_structure.md  experiment_guidelines.md  ml_governance.md  mlops_architecture.md  pipelines.md  quick_start.md  setup_guide.md
{{ cookiecutter.repo_name }}/notebooks/: notebook_template.ipynb
{{ cookiecutter.repo_name }}/scripts/: README.md  canary_deployment.py  mlops.sh  setup_mlops.sh  setup_mlops_structure.sh
{{ cookiecutter.repo_name }}/src/: README.md
{{ cookiecutter.repo_name }}/src/data/: aws_integration.py
{{ cookiecutter.repo_name }}/templates/: business_requirements_template.md  data_card_template.md  model_card_template.md
(+23 files in other folders)
